Added Hero/Features/How It Works/FAQ sections to landing page; updated MCP prompt to allow for one-pager generation of a singular company

--- a/client/src/index.css
+++ b/client/src/index.css
@@ -12,6 +12,27 @@
   text-rendering: optimizeLegibility;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
+
+  /* --grey: #0d0c31;
+  --blue: #3533cd;
+  --white: #fcfafa;
+  --black: #000000;
+  --light-grey: #8ea4d2; */
+}
+
+@theme {
+  --color-dark-grey: #0d0c31;
+  --color-blue: #3533cd;
+  --color-white: #fcfafa;
+  --color-light-grey: #8ea4d2;
+}
+
+* {
+  scroll-behavior: smooth;
+}
+
+body {
+  overflow-x: hidden;
 }
 
 /* Scrollbar styles */
